# omp

./: .gitignore  README.md  pyproject.toml  tox.ini
src/omp/: cli.py  mstdn.py
